# linear_solver_experiment

./: CMakeLists.txt  README.md  plot.ipynb  plot.jl  poisson.c
plotting/: plot.ipynb
src/: diffusion.c  hello.c
